--- a/AgentCompiler.html
+++ b/AgentCompiler.html
@@ -16,6 +16,21 @@
     function API_Key() {
         return document.getElementById('API_KEY').value;
     }
+    async function API_LoadBase(url) {
+        try {
+            const response = await fetch('https://github.com/rolyataylor2/LLM-LayeredContext/raw/main/Claude-Aidyn%20-%20Sonnet.json');
+
+            // Check if the response is ok (status in the range 200-299)
+            if (!response.ok) {
+                throw new Error(`HTTP error! status: ${response.status}`);
+            }
+            const data = await response.json(); // Parses the JSON response
+            return data;
+        } catch (error) {
+            console.error("Error fetching JSON: ", error);
+            return null; // or handle the error as you see fit
+        }
+    }
     function API_AddResponse() {
         const data = { ...API_Object };
         data.messages.concat(API_AdditionalMessages);
